--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "udemy"
   ],
   "author": "Amanda Santana <amandasantanati@gmail.com> (http://amandasantanati.com.br/)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
+  }
 }
