--- a/fizzbuzz/package.json
+++ b/fizzbuzz/package.json
@@ -4,8 +4,14 @@
   "description": "FizzBuzz challenge",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register",
     "test:tdd": "npm run test -- --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint"
+    }
   },
   "keywords": [],
   "author": "Amanda Santana <amandasantanati@gmail.com> (http://amandasantanati.com.br/)",
@@ -15,6 +21,10 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/register": "^7.9.0",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "husky": "^4.2.5",
     "mocha": "^7.1.2"
   }
 }
