--- a/fizzbuzz/package.json
+++ b/fizzbuzz/package.json
@@ -15,6 +15,9 @@
     }
   },
   "nyc": {
+    "functions": 80,
+    "lines": 80,
+    "check-coverage": true,
     "reporter" : ["text", "html"]
   },
   "eslintIgnore": ["*.spec.js"],
