--- a/fizzbuzz/package.json
+++ b/fizzbuzz/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint"
+      "pre-push": "npm run lint && npm run test:coverage"
     }
   },
   "nyc": {
